[package]
name = "intellidyn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lambda_http]          # AWS Lambda Runtime
version = "0.7.3"

[dependencies.tokio]                # For async networking
version = "1.25.0"
features = ["full"]

[dependencies.serde]                # For serialization and deserialization
version = "1.0.152"
features = ["derive"]

[dependencies.serde_json]           # For JSON
version = "1.0.93"

[dependencies.tracing-subscriber]   # For telemetry, logging and debugging
version = "0.3.16"
features = ["env-filter"]